Fix spacing in description

--- a/src/styles/talk/speaker.module.css
+++ b/src/styles/talk/speaker.module.css
@@ -51,7 +51,7 @@ div.frame {
 
   div.id_wrapper {
     max-width: 720px;
-    top: 120%;
+    top: 130%;
   }
 }
 
